Set max width of whats new widget to 100% of container, to prevent overlap

--- a/src/whats-new/css/objects/_honeycomb.whats-new.objects.whats-new.scss
+++ b/src/whats-new/css/objects/_honeycomb.whats-new.objects.whats-new.scss
@@ -2,6 +2,7 @@
     display: block;
     position: relative;
     width: $hc-whats-new-width;
+    max-width: 100%;
     background-color: $hc-whats-new-background-color;
     border-radius: $hc-whats-new-border-radius;
     border-style: solid;
